import "partnerRequestSequenceBlock.proto";
import "partnerFirstPhaseResultMessage.proto";
import "partnerBackoutCommitRequest.proto";
import "partnerCompleteCommitRequest.proto";
import "partnerCommitRequest.proto";
import "partnerError.proto";
import "heartbeat.proto";
import "promotionMessage.proto";
import "util.proto";
import "install.proto";

option java_package = "ralph_protobuffs";
option java_outer_classname = "GeneralMessageProto";

message GeneralMessage
{
    optional PartnerRequestSequenceBlock request_sequence_block = 1;
    optional PartnerFirstPhaseResultMessage first_phase_result = 2;
    optional PartnerBackoutCommitRequest backout_commit_request = 3;
    optional PartnerCompleteCommitRequest complete_commit_request = 4;
    optional PartnerCommitRequest commit_request = 5;
    optional PartnerError error = 6;
    optional Heartbeat heartbeat = 7;
    optional Promotion promotion = 8;
    optional Install install = 9;
    
    required uint64 timestamp = 10;
    required UUID sender_host_uuid = 11;
}
